--- a/web/index.html
+++ b/web/index.html
@@ -7,14 +7,14 @@
 
     <title>NREGA Bot: The Ultimate Tool for NREGA Task Automation</title>
     <meta name="description"
-        content="Automate your NREGA tasks with NREGA Bot v2.7.9. Now featuring powerful new tools like Issued MR Details, PDF Merger, and enhanced MR Tracking with ABPS pendency reports.">
+        content="Automate your NREGA tasks with NREGA Bot v2.7.10. Now featuring powerful new tools like Issued MR Details, PDF Merger, and enhanced MR Tracking with ABPS pendency reports.">
     <meta name="keywords"
         content="NREGA, MGNREGA, automation, FTO Generation, NREGA Bot, Jobcard Verification, MSR processor, wagelist, workcode generator, Palojori, Jharkhand, software, donation, eMB Verify, IF Editor, MR Fill, MR Tracking, Issued MR, PDF Merger, ABPS">
     <meta name="author" content="Rajat Poddar">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <meta property="og:title" content="NREGA Bot v2.7.9">
+    <meta property="og:title" content="NREGA Bot v2.7.10">
     <meta property="og:description"
         content="The ultimate tool to save time and automate your tedious NREGA data entry tasks.">
     <meta property="og:image" content="https://nregabot.com/og-logo.png">
@@ -155,7 +155,7 @@
                 <div class="container mx-auto px-4 sm:px-6 py-3 text-center text-white">
                     <p>
                         <span class="font-bold bg-white text-blue-600 rounded-full px-2 py-0.5 text-xs mr-2">NEW</span>
-                        <strong>Version 2.7.9 is here!</strong> Introducing <strong>Issued MR Details</strong>, <strong>PDF Merger</strong>, and new ABPS tracking in MR Tracking!
+                        <strong>Version 2.7.10 is here!</strong> Introducing <strong>Zero MR</strong> processing and a new <strong>T+8 to T+15</strong> filter in MR Tracking!
                         <a href="#downloads" class="underline ml-2 hover:text-blue-200">Download Now &rarr;</a>
                     </p>
                 </div>
@@ -173,10 +173,10 @@
                         instantly.</p>
                     <div
                         class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
-                        <a href="https://nregabot.com/updates/NREGABot-v2.7.9-Setup.exe"
+                        <a href="https://nregabot.com/updates/NREGABot-v2.7.10-Setup.exe"
                             class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors text-lg w-full sm:w-auto dark:bg-blue-500 dark:hover:bg-blue-600">Download
                             for Windows</a>
-                        <a href="https://nregabot.com/updates/NREGABot-v2.7.9-macOS.dmg"
+                        <a href="https://nregabot.com/updates/NREGABot-v2.7.10-macOS.dmg"
                             class="bg-gray-700 text-white font-bold px-6 py-3 rounded-lg hover:bg-gray-800 transition-colors text-lg w-full sm:w-auto dark:bg-gray-600 dark:hover:bg-gray-700">Download
                             for macOS</a>
                     </div>
@@ -232,10 +232,10 @@
                         bug fixes, and future updates. All plans include <strong>500 MB of Cloud Storage</strong>.
                     </p>
                     
-                    <div class="mt-8 mb-6 p-4 bg-green-100 dark:bg-green-900/50 border border-green-300 dark:border-green-700 rounded-lg max-w-md mx-auto" data-aos="zoom-in">
+                    <!-- <div class="mt-8 mb-6 p-4 bg-green-100 dark:bg-green-900/50 border border-green-300 dark:border-green-700 rounded-lg max-w-md mx-auto" data-aos="zoom-in">
                          <p class="text-lg font-semibold text-green-800 dark:text-green-200">🎉 Festival Discount! 🎉</p>
                          <p class="mt-1 text-green-700 dark:text-green-300">Use code <strong class="font-mono bg-green-200 dark:bg-green-800 px-1.5 py-0.5 rounded">FESTIVAL15</strong> at checkout for <strong class="font-semibold">15% OFF</strong> any plan!</p>
-                    </div>
+                    </div> -->
                     <div class="mt-12 grid md:grid-cols-2 lg:grid-cols-4 gap-6 max-w-7xl mx-auto">
 
                         <div
@@ -400,7 +400,7 @@
                         </div>
                         <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700" data-aos="fade-up" data-aos-delay="750">
                             <h4>MR Tracking</h4>
-                            <p class="text-gray-600 dark:text-gray-400 mt-2">Track MR status in real-time. Now includes intelligent ABPS pendency checking and reporting. Export reports and extract workcodes.</p>
+                            <p class="text-gray-600 dark:text-gray-400 mt-2">Track MR status. Now includes intelligent ABPS pendency checking, a new 'T+8 to T+15' filter, and a workflow to forward data to the new Zero MR tab.</p>
                         </div>
                         <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700" data-aos="fade-up" data-aos-delay="800">
                             <h4>Dashboard Report</h4>
@@ -418,6 +418,10 @@
                          <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700" data-aos="fade-up" data-aos-delay="950">
                             <h4>PDF Merger <span class="text-xs bg-blue-100 text-blue-800 dark:bg-blue-900 dark:text-blue-300 font-semibold px-2 py-0.5 rounded-full ml-1">NEW</span></h4>
                             <p class="text-gray-600 dark:text-gray-400 mt-2">A utility to select, re-order, and merge multiple PDF files into one single document, saved in a 'Merged_Pdf_Output' folder.</p>
+                        </div>
+                        <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700" data-aos="fade-up" data-aos-delay="1000">
+                            <h4>Zero MR <span class="text-xs bg-blue-100 text-blue-800 dark:bg-blue-900 dark:text-blue-300 font-semibold px-2 py-0.5 rounded-full ml-1">NEW</span></h4>
+                            <p class="text-gray-600 dark:text-gray-400 mt-2">A new automation to submit 'Zero MR' for muster rolls that have not been filled between T+8 and T+15 days.</p>
                         </div>
                     </div>
                 </div>
